@@ -17,7 +17,7 @@
 #include "misc.h"	/* XXX for dosetenv() and makeTempFile() */
 #include "legacy.h"	/* XXX for mdbinfile() */
 #define	_RPMLEAD_INTERNAL
-#include "rpmlead.h"
+#include <pkgio.h>		/* XXX sizeof(struct rpmlead) */
 #include "signature.h"
 #include "header_internal.h"
 #include "debug.h"
